 2011-09-29 08:01  hvlad 
   M src/jrd/vio.cpp
misc

 2011-09-29 07:45  hvlad 
   M src/jrd/vio.cpp
Fixed bug CORE-3610 : Can insert DUPLICATE keys in UNIQUE index

 2011-09-28 10:23  dimitr 
   M builds/install/arch-specific/win32/ru/custom_messages_ru.inc
   M builds/install/arch-specific/win32/ru/installation_readme.txt
Russian translation adjustments.

 2011-09-28 10:05  paul_reeves 
   M builds/install/arch-specific/win32/cz/custom_messages_cz.inc
use correct language marker for new entries

 2011-09-28 09:58  paul_reeves 
   M builds/install/arch-specific/win32/ru/custom_messages_ru.inc
Use proper english for place holder text.

 2011-09-28 09:49  paul_reeves 
   M builds/install/arch-specific/win32/ru/Readme.txt
   M builds/install/arch-specific/win32/ru/custom_messages_ru.inc
   M builds/install/arch-specific/win32/ru/installation_readme.txt
Sync B2_5_Release branch with changes made to R2_5_1

 2011-09-28 09:17  paul_reeves 
   M builds/install/arch-specific/win32/pt/custom_messages_pt.inc
   M builds/install/arch-specific/win32/pt/instalacao_leia-me.txt
   M builds/install/arch-specific/win32/pt/leia-me.txt
update pt i18n files for windows installer

 2011-09-28 09:16  paul_reeves 
   A builds/install/arch-specific/win32/cz/ctime.txt
   M builds/install/arch-specific/win32/cz/custom_messages_cz.inc
   A builds/install/arch-specific/win32/cz/instalace_ctime.txt
Add/update cz i18n files for windows installer

 2011-09-26 07:14  dimitr 
   M doc/WhatsNew
Updated docs.

 2011-09-21 13:51  alexpeshkoff 
   M src/remote/inet.cpp
Fixed unregistered bug - regression, found in 2.5.1 rc1

 2011-09-20 11:50  makowski 
   M builds/install/arch-specific/win32/fr/custom_messages_fr.inc
   D builds/install/arch-specific/win32/fr/documents-en-francais.txt
   M builds/install/arch-specific/win32/fr/installation_lisezmoi.txt
   M builds/install/arch-specific/win32/fr/lisezmoi.txt
update french docs

 2011-09-20 08:02  paul_reeves 
   A builds/install/arch-specific/win32/cz