@@ -3,16 +3,16 @@
                *** DO NOT EDIT ***
   TO CHANGE ANY INFORMATION IN HERE PLEASE
   EDIT src/misc/writeBuildNum.sh
-  FORMAL BUILD NUMBER:26370
+  FORMAL BUILD NUMBER:26371
 */
 
-#define PRODUCT_VER_STRING "2.5.1.26370"
-#define FILE_VER_STRING "WI-V2.5.1.26370"
-#define LICENSE_VER_STRING "WI-V2.5.1.26370"
-#define FILE_VER_NUMBER 2, 5, 1, 26370
+#define PRODUCT_VER_STRING "2.5.1.26371"
+#define FILE_VER_STRING "WI-V2.5.1.26371"
+#define LICENSE_VER_STRING "WI-V2.5.1.26371"
+#define FILE_VER_NUMBER 2, 5, 1, 26371
 #define FB_MAJOR_VER "2"
 #define FB_MINOR_VER "5"
 #define FB_REV_NO "1"
-#define FB_BUILD_NO "26370"
+#define FB_BUILD_NO "26371"
 #define FB_BUILD_TYPE "V"
 #define FB_BUILD_SUFFIX "Firebird 2.5"
