@@ -1,3 +1,9 @@
+ 2011-10-03 14:54  paul_reeves 
+   M builds/install/arch-specific/win32/BuildExecutableInstall.bat
+   M builds/install/arch-specific/win32/FirebirdInstall_20.iss
+   M builds/install/arch-specific/win32/es/leame_instalacion.txt
+Sync B2_5_Release branch with changes made to R2_5_1
+
  2011-09-29 08:01  hvlad 
    M src/jrd/vio.cpp
 misc
